<resources>
    <string name="app_name">Tugas Akhir</string>

    <string name="gunung">Gunung</string>
    <string name="pantai">Pantai</string>
    <string name="candi">Candi</string>
    <string name="hotel">Hotel</string>
    <string name="kuliner">Kuliner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
