<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.looper.loop.PreferencesFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonGunung"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/gunung"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/cardview_light_background"
            android:layout_weight="0.2"
            android:gravity="center"
            />
        <Button
            android:id="@+id/buttonPantai"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/pantai"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/cardview_light_background"
            android:layout_weight="0.2"
            android:gravity="center"
            />
        <Button
            android:id="@+id/buttonCandi"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/candi"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/cardview_light_background"
            android:layout_weight="0.2"
            android:gravity="center"
            />
        <Button
            android:id="@+id/buttonHotel"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/hotel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/cardview_light_background"
            android:layout_weight="0.2"
            android:gravity="center"
            />
        <Button
            android:id="@+id/buttonKuliner"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/kuliner"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/cardview_light_background"
            android:layout_weight="0.2"
            android:gravity="center"
            />
    </LinearLayout>


</FrameLayout>